Fixed bug when PrevStep and NextStep buttons are not visible on resolutions between 768 and 900px.

--- a/node/public/stylesheets/global-responsive.css
+++ b/node/public/stylesheets/global-responsive.css
@@ -158,9 +158,12 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 900px) {
+@media (min-width: 768px) and (max-width: 900px) { 
   #heading, #menu, #submenu, #content-block, #footer {
     margin: 0 10px;
+  } 
+  #content-block {
+    margin-bottom: 100px;
   }
 }
 
